--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -304,6 +304,7 @@ template{
   --nav-item-display: inline-block;
   --nav-item-margin: 0 0 3rem 0;
   --nav-item-link-hover: var(--color-primary);
+  --section-tagline-margin: 0;
 }
 *, *:before, *:after {
     box-sizing: border-box;
@@ -346,6 +347,7 @@ a:active {
 }
 .section-tagline {
   text-transform: var(--section-tagline-transform);
+  margin: var(--section-tagline-margin);
 }
 .container {
     width: 960px;
@@ -397,4 +399,27 @@ a:active {
 }
 .nav .nav-link:hover {
     color: var(--nav-item-link-hover);
+}
+ul.row{
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.col-1-3{
+    width: 33.33%;
+    float: left;
+    padding: 0.5rem;
+}
+.col-1-2{
+    width: 50%;
+    float: left;
+    padding: 0.5rem;
+}
+.footer-copyright{
+    margin: 0;
+    font-size: var(--font-size-small);
+    color: var(--text-color);
+}
+.footer ul{
+    text-align: right;
 }
